<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iTracing2</string>
    <string name="ble_not_supported">sorry bluetooth LE is not supported on your device</string>
    <string name="action_scan_start">detect</string>
    <string name="beacon_not_found">keyring not found</string>
    <string name="action_connect">connect</string>
    <string name="immediate_alert">ring the keyring</string>
    <string name="link_background">link background</string>
    <string name="stop_ring">stop ring</string>
    <string name="stop_vibrate">stop vibration</string>
    <string name="simple_button_action">simple click button action</string>
    <string name="simple_button_action_summary">what is the button action ?</string>
    <string name="double_button_action">double click button action</string>
    <string name="double_button_action_summary">what is the button action ?</string>
    <string name="link_background_summary">loss link between device and keyring</string>
    <string name="battery_info">battery info</string>
    <string name="immediate_alert_summary">click here to alert the keyring</string>
    <string name="welcome_text">Welcome on iTracing2.\n\nThis application allows you to communicate with your iSee (Quintic PROXR) bluetooth device.\n
        If like me, the poorest application "iTracing" disturbs you, enjoy to use my own version :)\n\n
        Please click on the DETECT button to find you iSee device (it should be named "Quintic PROXR").\n\n
        If nothing is detected, a box appears containing all detected compatibles devices.\n
        If this box is empty, you should reboot your iTag (because is a cheap device) and retry.\n\n
        Note that loss link and iTag button feature are available only with "background link" option.\n\n
        Keep in mind that i develop iTracing2 only on my free time ;-)</string>
    <string name="donate">donate (PayPal)</string>
    <string name="feedback">feedback</string>
    <string name="donate_summary">to support my work :)</string>
    <string name="feedback_summary">feel free to improve this product</string>
    <string name="display_last_position">display the last recorded position</string>
    <string name="out_of_band_action">out of band action</string>
    <string name="out_of_band_action_summary">what is the action ?</string>
    <string name="action_on_power_off">link is lost on power off</string>
    <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
    <string name="ring_tone_summary">select the ringtone referred to action</string>
    <string name="ring_tone">ring tone</string>
    <string name="rssi_info">rssi info</string>
    <string name="actions">keyring\'s actions</string>
    <string name="select_device">select a device</string>
    <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
    <string name="vibrator_not_found">vibrator not found! please be sure that you have this feature on your phone.</string>
    <string name="something_goes_wrong">something goes wrong!</string>
    <string-array name="button_actions">
        <item>nothing</item>
        <item>ring the phone</item>
        <item>vibrate the phone</item>
        <item>capture my position</item>
    </string-array>
    <string-array name="button_actions_values">
        <item>NOTHING</item>
        <item>RING_PHONE</item>
        <item>VIBRATE_PHONE</item>
        <item>CAPTURE_POSITION</item>
    </string-array>
</resources>
